// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHistogramIndicatorAggregation should generate a aggregation for good events 1`] = `
Object {
  "_good": Object {
    "aggs": Object {
      "total": Object {
        "range": Object {
          "field": "latency",
          "keyed": true,
          "ranges": Array [
            Object {
              "from": 0,
              "key": "target",
              "to": 100,
            },
          ],
        },
      },
    },
    "filter": Object {
      "match_all": Object {},
    },
  },
  "goodEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "value": "_good>total['target']>_count",
      },
      "script": "params.value",
    },
  },
}
`;

exports[`getHistogramIndicatorAggregation should generate a aggregation for total events 1`] = `
Object {
  "_total": Object {
    "aggs": Object {
      "total": Object {
        "value_count": Object {
          "field": "latency",
        },
      },
    },
    "filter": Object {
      "match_all": Object {},
    },
  },
  "totalEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "value": "_total>total",
      },
      "script": "params.value",
    },
  },
}
`;

exports[
  `getHistogramIndicatorAggregation should generate a value_count aggregation for good events 1`
] = `
Object {
  "_good": Object {
    "aggs": Object {
      "total": Object {
        "value_count": Object {
          "field": "latency",
        },
      },
    },
    "filter": Object {
      "match_all": Object {},
    },
  },
  "goodEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "value": "_good>total",
      },
      "script": "params.value",
    },
  },
}
`;

exports[
  `getHistogramIndicatorAggregation should include the filter for good events when provided 1`
] = `
Object {
  "_good": Object {
    "aggs": Object {
      "total": Object {
        "range": Object {
          "field": "latency",
          "keyed": true,
          "ranges": Array [
            Object {
              "from": 0,
              "key": "target",
              "to": 100,
            },
          ],
        },
      },
    },
    "filter": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "some.field": "value",
                  },
                },
              ],
            },
          },
        ],
        "must": Array [],
        "must_not": Array [],
        "should": Array [],
      },
    },
  },
  "goodEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "value": "_good>total['target']>_count",
      },
      "script": "params.value",
    },
  },
}
`;

exports[
  `getHistogramIndicatorAggregation should include the filter for total events when provided 1`
] = `
Object {
  "_total": Object {
    "aggs": Object {
      "total": Object {
        "value_count": Object {
          "field": "latency",
        },
      },
    },
    "filter": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "some.field": "value",
                  },
                },
              ],
            },
          },
        ],
        "must": Array [],
        "must_not": Array [],
        "should": Array [],
      },
    },
  },
  "totalEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "value": "_total>total",
      },
      "script": "params.value",
    },
  },
}
`;
